--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <a href="./signin.html"><button>Login</button></a>
                 <a href="./signup.html"><button>Signup</button></a>
             </div>
+            <button class="menu-btn" onclick="displayNav()">
+                <img src="./CSS Files/Images/navigation-bar.png" alt="" class="menu-icon">
+            </button>
         </div>
 
 
