--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="./signin.html"><button>Login</button></a>
                 <a href="./signup.html"><button>Signup</button></a>
             </div>
+
             <button class="menu-btn" onclick="displayNav()">
                 <img src="./CSS Files/Images/navigation-bar.png" alt="" class="menu-icon">
             </button>
@@ -62,7 +63,7 @@
                 <img id="hero3img1" src="./CSS Files/Images/online-education.png" alt="">
                 <p id="hero3p1">"Learnify welcomes your expertise! Share your knowledge effortlessly by creating an account, uploading your study materials in PDF, DOC, or TXT formats, and providing essential details. Our team reviews submissions for quality before making them available to our community. Engage with learners by answering questions and participating in discussions, fostering a collaborative learning environment. Join us in making Learnify a hub of valuable educational resources!"</p>
             </div>
-            <div class="section">
+            <div class="section" id="block2">
                 <p id="hero3p2">"Discover 'Learn New Technologies' on Learnify - your gateway to the latest advancements! Join us to explore cutting-edge innovations, engage with comprehensive guides, and stay updated with the evolving tech landscape. Contribute your knowledge and be part of a community passionate about exploring and sharing insights into emerging technologies. Dive in and expand your tech horizons with us!"</p>
                 <img id="hero3img2" src="./CSS Files/Images/teaching.png" alt="">
             </div>
@@ -108,5 +109,12 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function displayNav(){
+            let content_nav = document.querySelector('.midsection');
+            content_nav.style.display = 'block';
+        }
+    </script>
 </body> 
 </html>
