--- a/about.html
+++ b/about.html
@@ -19,21 +19,23 @@
             <div class="midsection">
                 <a href="./home.html">Home</a>
                 <a href="./about.html">About</a>
-                <a href="#">Notes</a>
+                <a href="./notes.html">Notes</a>
                 <a href="#">Practice</a>
             </div>
             <div class="user">
                 <a href="./signin.html"><button>Login</button></a>
-                <a href="#"><button>Signup</button></a>
+                <a href="./signup.html"><button>Signup</button></a>
             </div>
+            <button class="menu-btn" onclick="displayNav()">
+                <img src="./CSS Files/Images/navigation-bar.png" alt="" class="menu-icon">
+            </button>
         </div>
 
         <!-- Learnify Details -->
         <div class="details">
             <div class="details1">
                 <h1>What is Learnify?</h1>
-                <p>Learnify is an innovative platform designed to revolutionize learning experiences. It merges technology and education seamlessly, offering a dynamic space for students, educators, and lifelong learners. Through interactive tools, personalized content, and collaborative features, Learnify empowers individuals to engage with diverse subjects in ways that suit their unique learning styles. It's a hub where knowledge meets innovation, fostering a culture of continuous learning and growth.
-                    Learnify serves as a comprehensive educational ecosystem, catering to various learning needs across different age groups and disciplines. It integrates cutting-edge teaching methodologies with adaptive learning techniques, allowing users to progress at their own pace while receiving tailored guidance. Through its intuitive interface, rich multimedia resources, and real-time feedback mechanisms, Learnify cultivates a dynamic learning environment conducive to curiosity, exploration, and mastery of subjects. It's a catalyst for fostering curiosity, collaboration, and lifelong learning habits.</p>
+                <p>Learnify is an innovative platform designed to revolutionize learning experiences. It merges technology and education seamlessly, offering a dynamic space for students, educators, and lifelong learners. Through interactive tools, personalized content, and collaborative features, Learnify empowers individuals to engage with diverse subjects in ways that suit their unique learning styles. It's a hub where knowledge meets innovation, fostering a culture of continuous learning and growth.</p>
             </div>
             <div class="details2">
                 <h1>Goals of Learnify</h1>
