--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
         <!-- Navigation Bar -->
         <div class="navigation_bar">
             <div class="logo">
-                <a href="./home.html"><i class="fa-solid fa-book-open-reader fa- xl" style="color: #252628;"></i></a>
-                <a href="./home.html">Learnify</a>
+                <a href="./index.html"><i class="fa-solid fa-book-open-reader fa- xl" style="color: #252628;"></i></a>
+                <a href="./index.html">Learnify</a>
             </div>
             <div class="midsection">
-                <a href="./home.html">Home</a>
+                <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./notes.html">Notes</a>
                 <a href="#">Practice</a>
