--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./notes.html">Notes</a>
-                <a href="./index.html">Practice</a>
+                <a href="./practice.html">Practice</a>
             </div>
             <div class="user">
                 <a href="./signin.html"><button>Login</button></a>
